--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vue/compiler-sfc": "^3.0.7",
     "ant-design-vue": "^2.0.1",
     "eslint": "^7.22.0",
+    "less": "^4.1.1",
     "vite": "^2.0.5",
     "vue": "3.0.5",
     "vue-draggable-next": "^2.0.1"
