--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ant-design-vue": "^2.0.1",
     "eslint": "^7.22.0",
     "less": "^4.1.1",
+    "localstorage": "^1.0.1",
     "vite": "^2.0.5",
     "vue": "3.0.5",
     "vue-draggable-next": "^2.0.1"
