--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "localstorage": "^1.0.1",
     "vite": "^2.0.5",
     "vue": "3.0.5",
-    "vue-draggable-next": "^2.0.1",
-    "vue3-clipboard": "^1.0.0"
+    "vue-draggable-next": "^2.0.1"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.13.3",
