--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,10 @@
         "build/main.js"
       ]
     }
-  ]
+  ],
+  "icons": {
+    "16": "src/icon/magic-line.png",
+    "48": "src/icon/magic-line.png",
+    "128": "src/icon/magic-line.png"
+  }
 }
