--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,13 @@
 {
-  "name": "Copy Jira Commit Message",
+  "name": "New Tab",
   "version": "1.0",
-  "description": "Copy Jira Commit Message!",
+  "description": "New Tab!",
   "permissions": [
-    "activeTab",
-    "declarativeContent",
+    "tabs",
     "storage"
   ],
-  "background": {
-    "scripts": [
-      "background.js"
-    ],
-    "persistent": false
-  },
-  "manifest_version": 2,
-  "content_scripts": [
-    {
-      "matches": [
-        "*://*/*"
-      ],
-      "js": [
-        "build/main.js"
-      ]
-    }
-  ],
-  "icons": {
-    "16": "src/icon/magic-line.png",
-    "48": "src/icon/magic-line.png",
-    "128": "src/icon/magic-line.png"
+  "manifest_version": 3,
+  "chrome_url_overrides" : {
+    "newtab": "build/index.html"
   }
 }
