--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ant-design-vue": "^2.2.7",
     "dayjs": "^1.10.7",
+    "naive-ui": "^2.38.2",
     "vue": "^3.2.6"
   },
   "devDependencies": {
