--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
   },
   "dependencies": {
     "ant-design-vue": "^2.2.7",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "less": "^4.2.0",
     "naive-ui": "^2.38.2",
-    "vue": "^3.2.6",
-    "vue-hooks-plus": "^2.2.0"
+    "vue": "^3.4.31",
+    "vue-hooks-plus": "^2.2.0",
+    "vue3-live2d": "^0.0.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.6.1",
+    "@rushstack/eslint-patch": "^1.10.3",
+    "@types/chrome": "^0.0.268",
+    "@vitejs/plugin-vue": "^5.0.5",
     "@vue/compiler-sfc": "^3.2.6",
-    "typescript": "^4.3.2",
-    "vite": "^2.5.4",
-    "vue-tsc": "^0.2.2"
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/tsconfig": "^0.5.1",
+    "eslint": "^8.39.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.26.0",
+    "prettier": "^3.3.2",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3",
+    "vue-tsc": "^2.0.24"
   }
 }
