--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.12.0",
     "ant-design-vue": "^2.2.7",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
