--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,14 +1,24 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "**/*", "*.vue"],
-  "exclude": ["**/__tests__/*"],
+  "include": [
+    "env.d.ts",
+    "**/*",
+    "*.vue"
+  ],
+  "exclude": [
+    "**/__tests__/*"
+  ],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["/*"]
+      "@/*": [
+        "/src/*"
+      ]
     },
     "allowJs": true,
-    "types": ["chrome"]
+    "types": [
+      "chrome"
+    ]
   }
 }
