--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,16 @@
   "name": "New Tab",
   "version": "1.1",
   "description": "New Tab!",
-  "permissions": [
-    "tabs",
-    "storage"
-  ],
+  "permissions": ["tabs", "storage"],
   "manifest_version": 3,
-  "chrome_url_overrides" : {
+  "chrome_url_overrides": {
     "newtab": "build/index.html"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://*/*"],
+      "js": ["/build/cursorEffect.js"]
+    }
+  ],
+  "options_page": "/build/options.html"
 }
