--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@rsbuild/core": "1.0.1-beta.14",
     "@rsbuild/plugin-less": "1.0.1-beta.14",
     "@rsbuild/plugin-vue": "1.0.1-beta.14",
+    "@vicons/carbon": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
     "axios": "^1.7.5",
     "code-inspector-plugin": "^0.17.7",
