增加了 学单词 的功能

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.11",
     "less": "^4.2.0",
     "naive-ui": "^2.38.2",
+    "openai": "^4.74.0",
     "vue": "^3.4.31",
     "vue-hooks-plus": "^2.2.0"
   },
