--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "less": "^4.2.0",
     "naive-ui": "^2.38.2",
     "openai": "^4.74.0",
+    "uuid": "^11.0.3",
     "vue": "^3.4.31",
     "vue-hooks-plus": "^2.2.0"
   },
