--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@rsbuild/core": "1.0.1-beta.14",
     "@rsbuild/plugin-less": "1.0.1-beta.14",
     "@rsbuild/plugin-vue": "1.0.1-beta.14",
+    "@unocss/postcss": "^0.65.1",
     "@vicons/carbon": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
     "axios": "^1.7.5",
@@ -20,6 +21,7 @@
     "less": "^4.2.0",
     "naive-ui": "^2.38.2",
     "openai": "^4.74.0",
+    "unocss": "^0.65.1",
     "uuid": "^11.0.3",
     "vue": "^3.4.31",
     "vue-hooks-plus": "^2.2.0"
