增加翻转效果

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@rsbuild/plugin-vue": "1.0.1-beta.14",
     "@unocss/postcss": "^0.65.1",
     "@vicons/carbon": "^0.12.0",
+    "@vicons/fluent": "^0.13.0",
     "@vicons/ionicons5": "^0.12.0",
+    "@vicons/material": "^0.13.0",
     "axios": "^1.7.5",
     "code-inspector-plugin": "^0.17.7",
     "cursor-effects": "^1.0.15",
