--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,23 @@
 {
   "name": "New Tab",
-  "version": "1.1",
+  "version": "1.1.2",
   "description": "New Tab!",
-  "permissions": ["tabs", "storage"],
+  "permissions": [
+    "tabs",
+    "storage"
+  ],
   "manifest_version": 3,
   "chrome_url_overrides": {
     "newtab": "build/index.html"
   },
   "content_scripts": [
     {
-      "matches": ["*://*/*"],
-      "js": ["/build/cursorEffect.js"]
+      "matches": [
+        "*://*/*"
+      ],
+      "js": [
+        "/build/cursorEffect.js"
+      ]
     }
   ],
   "options_page": "/build/options.html"
